some changes, fix bug and format code

--- a/ProjetoPOO/nbproject/private/private.properties
+++ b/ProjetoPOO/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\weslley\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/home/arthur-gonzaga/snap/netbeans/common/data/11.0/build.properties
